# quant_anomaly

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
configs/: gpt2_xs_4bit.yaml  tabpfn_4bit.yaml  tinyvit_4bit.yaml
notebooks/: quick_tour.ipynb
scripts/: detect.py  plot_reliability.py  plot_residuals.py  plot_roc.py  quantize.py  run_all.py  setup.py
src/rnf_experiments/: cli.py  training.py
src/rnf_experiments/data/: m5product.py  utils.py
src/rnf_experiments/detectors/: __init__.py  constat.py  logistic.py  rnf.py
src/rnf_experiments/evaluation/: metrics.py
src/rnf_experiments/models/: __init__.py  gpt2_xs.py  tabpfn.py  tinyvit.py
src/rnf_experiments/quantization/: ptq.py
src/rnf_experiments/visualization/: plots.py
tests/: test_metrics.py  test_quantize.py
